--- a/app/src/main/res/layout/item_movie_details.xml
+++ b/app/src/main/res/layout/item_movie_details.xml
@@ -41,5 +41,15 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Shawshank Redemption" />
 
+        <ImageView
+            android:id="@+id/bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@android:drawable/ic_menu_save"
+            android:layout_marginEnd="@dimen/text_margin_horizontal"
+            android:layout_marginBottom="@dimen/poster_margin"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
