--- a/app/src/main/res/layout/activity_movie_guide.xml
+++ b/app/src/main/res/layout/activity_movie_guide.xml
@@ -23,6 +23,18 @@
             android:inputType="text" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/movie_bookmarks_details_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/list_margin_top"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/search_text"
+            app:layout_constraintBottom_toTopOf="@id/movie_details_list"/>
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_details_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_text" />
+            app:layout_constraintTop_toBottomOf="@id/movie_bookmarks_details_list" />
 
         <include
             android:id="@+id/errorLayout"
