--- a/app/src/main/res/layout/activity_movie_guide.xml
+++ b/app/src/main/res/layout/activity_movie_guide.xml
@@ -26,7 +26,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_bookmarks_details_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/movie_details_list"
