--- a/app/src/main/res/layout/item_movie_details.xml
+++ b/app/src/main/res/layout/item_movie_details.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@android:drawable/ic_menu_save"
+            android:src="@android:drawable/ic_input_get"
             android:layout_marginEnd="@dimen/text_margin_horizontal"
             android:layout_marginBottom="@dimen/poster_margin"/>
 
