--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,17 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+
+    <style name="searchViewStyle" parent="Widget.AppCompat.Light.SearchView">
+        <item name="closeIcon">@android:drawable/ic_menu_close_clear_cancel</item>
+        <item name="searchIcon">@android:drawable/ic_menu_search</item>
+        <item name="searchHintIcon">@android:drawable/ic_menu_search</item>
     </style>
 
 </resources>
